--- a/contactme.html
+++ b/contactme.html
@@ -12,7 +12,7 @@
         text-align: right;
     }
     body{
-        background-image: url("img/d1.webp");
+        background-image: url("d1.webp");
         background-size:cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -54,7 +54,7 @@
 <body>
     <header>
         <table class="ha">
-<th><img src="img\download.png" alt="My picture" style="width:200px;height:200px;"> </th>
+<th><img src="download.png" alt="My picture" style="width:200px;height:200px;"> </th>
 <th align="center"><h1>My Portfolio </h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;~Sejal Singh</th>
 </table>
 </header>
