--- a/qualification.html
+++ b/qualification.html
@@ -13,7 +13,7 @@
         text-align: right;
     }
     body{
-        background-image: url("img/d1.webp");
+        background-image: url("d1.webp");
         background-size:cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -51,7 +51,7 @@
 <body>
     <header>
         <table class="ha">
-<th><img src="img\download.png" alt="My picture" style="width:200px;height:200px;"> </th>
+<th><img src="download.png" alt="My picture" style="width:200px;height:200px;"> </th>
 <th align="center"><h1>My Portfolio </h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;~Sejal Singh</th>
 </table>
 </header>
