--- a/qualification.html
+++ b/qualification.html
@@ -51,7 +51,7 @@
 <body>
     <header>
         <table class="ha">
-<th><img src="download.png" alt="My picture" style="width:200px;height:200px;"> </th>
+<th><img src="Pfp.jpg" alt="My picture" style="width:200px;height:200px;"> </th>
 <th align="center"><h1>My Portfolio </h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;~Sejal Singh</th>
 </table>
 </header>
